[gd_scene load_steps=12 format=3 uid="uid://b24xsgq76t3gh"]

[ext_resource type="Script" uid="uid://65ofa6i513iw" path="res://models/spawner.gd" id="1_tser3"]
[ext_resource type="Script" uid="uid://cleouoctj0fau" path="res://models/track_controller.gd" id="1_u140q"]
[ext_resource type="PackedScene" uid="uid://blx3tvfaejatq" path="res://models/Button.tscn" id="2_ipebg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3bpko"]
albedo_color = Color(0.165656, 0.165656, 0.165656, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_r24an"]
material = SubResource("StandardMaterial3D_3bpko")
size = Vector2(100, 6)

[sub_resource type="CylinderMesh" id="CylinderMesh_bkcj2"]
top_radius = 0.1
bottom_radius = 0.1
height = 100.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m2y3f"]
transparency = 1
albedo_color = Color(0.537255, 1, 1, 0.0901961)

[sub_resource type="BoxMesh" id="BoxMesh_xru1g"]
material = SubResource("StandardMaterial3D_m2y3f")
size = Vector3(3, 1, 6)

[sub_resource type="BoxShape3D" id="BoxShape3D_6dx3y"]
size = Vector3(3, 1, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b2826"]
transparency = 1
albedo_color = Color(1, 0.577597, 0.364079, 0.215686)

[sub_resource type="BoxMesh" id="BoxMesh_bquux"]
material = SubResource("StandardMaterial3D_b2826")
size = Vector3(3, 1, 6)

[node name="Track" type="Node3D"]
script = ExtResource("1_u140q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_r24an")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_bkcj2")
skeleton = NodePath("../..")

[node name="Spawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -45, 0, 0)
script = ExtResource("1_tser3")
button = ExtResource("2_ipebg")

[node name="Timer" type="Timer" parent="Spawner"]
autostart = true

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 43, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_xru1g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_6dx3y")

[node name="HurtBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_bquux")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_6dx3y")

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
